[package]
name = "pallet-subtensor"
version = "4.0.0-dev"
description = "FRAME pallet for runtime logic of Subtensor Blockchain."
authors = ["Bittensor Nucleus Team"]
homepage = "https://bittensor.com"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/opentensor/subtensor"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Features
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.4.0" }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, branch = "release-polkadot-v1.4.0" }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, branch = "release-polkadot-v1.4.0" }
pallet-collective = { version = "4.0.0-dev", default-features = false, path = "../collective" }
pallet-membership = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.4.0" }

# FRAME
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.4.0" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.4.0" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.4.0" }

# Substrate Internals
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, branch = "release-polkadot-v1.4.0" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.4.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.4.0" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, branch = "release-polkadot-v1.4.0" }

# Utils
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
serde = { version = "1.0.132", default-features = false, features = ["derive"] }
serde-tuple-vec-map = { version = "1.0.1", default-features = false }
serde_bytes = { version = "0.11.8", default-features = false, features = ["alloc"] }
serde_with = { version = "3.4.0", default-features = false, features=["macros"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
substrate-fixed = { git = 'https://github.com/encointer/substrate-fixed.git', tag = "v0.5.9" }
ndarray = { version = "0.15.0", default-features = false }
hex = { version = "0.4", default-features = false }
hex-literal = "0.4.1"

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, branch = "release-polkadot-v1.4.0", features = ["std"] }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, branch = "release-polkadot-v1.4.0" }
# Substrate
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, branch = "release-polkadot-v1.4.0" }
parity-util-mem = { version = "0.12.0", features = ['primitive-types'] }
rand = "0.8"
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, branch = "release-polkadot-v1.4.0" }

[features]
default = ["std"]
std = [
	"codec/std", 
	"frame-benchmarking/std", 
	"frame-support/std", 
	"sp-std/std", 
	"frame-system/std", 
	"scale-info/std", 
	"pallet-collective/std", 
	"pallet-membership/std"
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
pow-faucet = []